--- a/ansible.cfg
+++ b/ansible.cfg
@@ -10,8 +10,9 @@ forks = 10
 force_handlers = True
 [ssh_connection]
 pipelining = True
+ssh_args = -o ControlMaster=auto -o ControlPersist=60s -o UserKnownHostsFile=/dev/null -o IdentitiesOnly=yes
 [privilege_escalation]
-become= True
+become = True
 become_method = sudo
 become_user = root
 become_ask_pass = False
