--- a/playbooks/envplaybooks/control.yml
+++ b/playbooks/envplaybooks/control.yml
@@ -2,7 +2,10 @@
 - hosts: control
   strategy: free 
   gather_facts: False
+  become: true
   tasks:
+  - name: Setting Hostname
+    command: hostnamectl set-hostname control.test.example.com
   - name: Creating Ansible User
     user:
       name: user
@@ -24,31 +27,62 @@
   - name: Adding control address to hosts file
     lineinfile:
       path: /etc/hosts
-      line: 192.168.55.80 control.node.example.com control
+      line: 192.168.55.60 control.test.example.com control
+      create: yes
+  - name: Adding Repo address to hosts file
+    lineinfile:
+      path: /etc/hosts
+      line: 192.168.55.59 repo.test.example.com repo
       create: yes
   - name: Adding node1 IP address to hosts file
     lineinfile:
       path: /etc/hosts
-      line: 192.168.55.81 ans1.node.example.com node1
+      line: 192.168.55.61 node1.test.example.com node1
       create: yes
   - name: Adding node2 IP address to hosts file
     lineinfile:
       path: /etc/hosts
-      line: 192.168.55.82 ans2.node.example.com node2
+      line: 192.168.55.62 node2.test.example.com node2
       create: yes
-  - name: Configuring network
-    shell: nmcli con mod "System enp0s8" ipv4.addresses 192.168.55.80/24 ipv4.gateway 192.168.55.1 ipv4.dns 8.8.8.8 ipv4.method manual
-  - name: Restarted Network
-    shell: nmcli con up "System enp0s8"
+#  - name: Configuring network
+#    shell: nmcli con mod "System eth0" ipv4.addresses 192.168.55.60/24 ipv4.gateway 192.168.55.1 ipv4.dns 8.8.8.8 ipv4.method manual
+#  - name: Restarted Network
+#    shell: nmcli con up "System eth0"
   - name: Starting Firewalld
     service: name=firewalld state=started
   - name: Enabling Firewall Services
     command: firewall-cmd --permanent --add-service=http --add-service=https --add-service=ntp --add-service=dns --add-service=kerberos --add-service=ldap --add-service=ldaps --add-service=ftp
-  - name: Installing Packages for Ansible Installation
-    command: yum install -y python-devel vim
-  - name: Installing Ansible
-    command: pip install 'ansible==2.7.1.0'
   - name: Generating RSA Key
     command : ssh-keygen -q -t rsa -f /home/user/.ssh/id_rsa -C "" -N ""
     become: yes
     become_user: user
+  - name: Creating Welcome Message
+    file:
+      path: /etc/profile.d/welcome.sh
+      state: touch
+      mode: 0755
+  - name: Building Welcome Message
+    blockinfile:
+      dest: /etc/profile.d/welcome.sh
+      block: |
+        #!/bin/bash
+        #
+        echo -e '       
+        #            _            _           _          _           _          _           _     
+        #          /\ \          /\ \        /\ \     _ /\ \        /\ \       /\ \        _\ \   
+        #         /  \ \        /  \ \      /  \ \   /\_\_\ \      /  \ \     /  \ \      /\__ \  
+        #        / /\ \ \      / /\ \ \    / /\ \ \_/ / /\__ \    / /\ \ \   / /\ \ \    / /_ \_\ 
+        #       / / /\ \ \    / / /\ \ \  / / /\ \___/ / /_ \ \  / / /\ \_\ / / /\ \ \  / / /\/_/ 
+        #      / / /  \ \_\  / / /  \ \_\/ / /  \/____/ / /\ \ \/ / /_/ / // / /  \ \_\/ / /      
+        #     / / /    \/_/ / / /   / / / / /    / / / / /  \/_/ / /__\/ // / /   / / / / /       
+        #    / / /         / / /   / / / / /    / / / / /     / / /_____// / /   / / / / / ____   
+        #   / / /________ / / /___/ / / / /    / / / / /     / / /\ \ \ / / /___/ / / /_/_/ ___/\ 
+        #  / / /_________/ / /____\/ / / /    / / /_/ /     / / /  \ \ / / /____\/ /_______/\__\/ 
+        #  \/____________\/_________/\/_/     \/_/\_\/      \/_/    \_\\/_________/\_______\/     
+        '"#
+        #
+         # You are logged into \"`hostname`\" as user \"`whoami`\"
+        # This system is running `cat /etc/redhat-release`
+        # kernel is `uname -r`
+        #
+        "
