--- a/playbooks/envplaybooks/keys.yml
+++ b/playbooks/envplaybooks/keys.yml
@@ -3,7 +3,7 @@
   tasks: 
   - name: Sending Key to node1
     expect:
-      command: ssh-copy-id -i /home/user/.ssh/id_rsa.pub user@ans1.node.example.com 
+      command: ssh-copy-id -i /home/user/.ssh/id_rsa.pub user@node1.test.example.com 
       responses:
         'Are you sure you want to continue connecting': 'yes'
         'password': 'password'
@@ -14,7 +14,7 @@
     ignore_errors: yes
   - name: Sending Key to node2
     expect:
-      command: ssh-copy-id -i /home/user/.ssh/id_rsa.pub user@ans2.node.example.com 
+      command: ssh-copy-id -i /home/user/.ssh/id_rsa.pub user@node2.test.example.com 
       responses:
         'Are you sure you want to continue connecting': 'yes'
         'password': 'password'
@@ -27,10 +27,10 @@
     debug:
       msg:
         - 'Next Steps: Accessing The Systems:'
-        - '- Control - 192.168.55.80'
-        - '- System 1 - 192.168.55.81'
-        - '- System 2 - 192.168.55.82'
-        - '- Username - vagrant'
-        - '- Password - vagrant'
+        - '- Control - 192.168.55.60'
+        - '- System 1 - 192.168.55.61'
+        - '- System 2 - 192.168.55.62'
+        - '- Username - user'
+        - '- Password - password'
         - '- For root - use `sudo` or `sudo su`'
-        - '- Access example - `ssh vagrant@192.168.55.80`'
+        - '- Access example - ssh user@192.168.55.60'
