--- a/playbooks/envplaybooks/control.yml
+++ b/playbooks/envplaybooks/control.yml
@@ -44,6 +44,22 @@
       path: /etc/hosts
       line: 192.168.55.62 node2.test.example.com node2
       create: yes
+  - name: Erasing Repos
+    shell: rm -rf /etc/yum.repos.d/*
+  - name: Creating Repo File
+    file:
+      path: /etc/yum.repos.d/rpms.repo
+      state: touch
+      mode: 0755
+  - name: Building Repo File
+    blockinfile:
+      dest: /etc/yum.repos.d/rpms.repo
+      block: |
+       [rpms]
+       name=rpms
+       baseurl=http://repo/rpms/75rpms
+       gpgcheck=0
+       enabled=1
 #  - name: Configuring network
 #    shell: nmcli con mod "System eth0" ipv4.addresses 192.168.55.60/24 ipv4.gateway 192.168.55.1 ipv4.dns 8.8.8.8 ipv4.method manual
 #  - name: Restarted Network
@@ -56,6 +72,7 @@
     command : ssh-keygen -q -t rsa -f /home/user/.ssh/id_rsa -C "" -N ""
     become: yes
     become_user: user
+    ignore_errors: yes
   - name: Creating Welcome Message
     file:
       path: /etc/profile.d/welcome.sh
