--- a/playbooks/envplaybooks/master.yml
+++ b/playbooks/envplaybooks/master.yml
@@ -1,6 +1,6 @@
 ---
+- import_playbook: repo.yml
 - import_playbook: control.yml
-#- import_playbook: repo.yml
 - import_playbook: node1.yml
 - import_playbook: node2.yml
 - import_playbook: keys.yml
