--- a/playbooks/envplaybooks/node1.yml
+++ b/playbooks/envplaybooks/node1.yml
@@ -44,10 +44,26 @@
       path: /etc/hosts
       line: 192.168.55.62 node2.test.example.com node2
       create: yes
-  - name: Configuring network
-    shell: nmcli con mod "System eth0" ipv4.addresses 192.168.55.61/24 ipv4.gateway 192.168.55.1 ipv4.dns 8.8.8.8 ipv4.method manual
-  - name: Restarted Network
-    shell: nmcli con up "System eth0"
+  - name: Erasing Repos
+    shell: rm -rf /etc/yum.repos.d/*
+  - name: Creating Repo File
+    file:
+      path: /etc/yum.repos.d/rpms.repo
+      state: touch
+      mode: 0755
+  - name: Building Repo File
+    blockinfile:
+      dest: /etc/yum.repos.d/rpms.repo
+      block: |
+       [rpms]
+       name=rpms
+       baseurl=http://repo/rpms/75rpms
+       gpgcheck=0
+       enabled=1
+#  - name: Configuring network
+#    shell: nmcli con mod "System eth0" ipv4.addresses 192.168.55.61/24 ipv4.gateway 192.168.55.1 ipv4.dns 8.8.8.8 ipv4.method manual
+#  - name: Restarted Network
+#    shell: nmcli con up "System eth0"
   - name: Starting Firewalld
     service: name=firewalld state=started
   - name: Enabling Firewall Services
@@ -56,6 +72,7 @@
     command : ssh-keygen -q -t rsa -f /etc/ssh/ssh_host_rsa_key -C "" -N ""
     args:
       creates: /etc/ssh/ssh_host_rsa_key
+    ignore_errors: yes
   - name: Fixing Resolv File
     shell: echo 'nameserver 8.8.8.8' > /etc/resolv.conf
   - name: Enabling services
