--- a/ansible.cfg
+++ b/ansible.cfg
@@ -8,6 +8,8 @@ command_warnings = false
 #callback_whitelist = profile_tasks
 forks = 10
 force_handlers = True
+timeout = 30
+ignore_errors = true
 [ssh_connection]
 pipelining = True
 ssh_args = -o ControlMaster=auto -o ControlPersist=60s -o UserKnownHostsFile=/dev/null -o IdentitiesOnly=yes
