--- a/playbooks/envplaybooks/control.yml
+++ b/playbooks/envplaybooks/control.yml
@@ -14,6 +14,13 @@
       append: yes
   - name: Changing User Password
     shell: echo password | sudo passwd user --stdin
+  - name: Make sure user is in the sudoers configuration
+    lineinfile:
+      path: /etc/sudoers
+      regexp: '^# %users  localhost'
+      insertafter: '^# %users  localhost'
+      line: 'user ALL=(ALL) NOPASSWD: ALL'
+      state: present
   - name: Fixing hosts file
     lineinfile:
       dest: /etc/hosts
@@ -44,6 +51,11 @@
       path: /etc/hosts
       line: 192.168.55.62 node2.test.example.com node2
       create: yes
+  - name: Adding node3 IP address to hosts file
+    lineinfile:
+      path: /etc/hosts
+      line: 192.168.55.63 node3.test.example.com node3
+      create: yes
   - name: Erasing Repos
     shell: rm -rf /etc/yum.repos.d/*
   - name: Creating Repo File
@@ -60,19 +72,18 @@
        baseurl=http://repo/rpms/75rpms
        gpgcheck=0
        enabled=1
-#  - name: Configuring network
-#    shell: nmcli con mod "System eth0" ipv4.addresses 192.168.55.60/24 ipv4.gateway 192.168.55.1 ipv4.dns 8.8.8.8 ipv4.method manual
-#  - name: Restarted Network
-#    shell: nmcli con up "System eth0"
   - name: Starting Firewalld
     service: name=firewalld state=started
   - name: Enabling Firewall Services
     command: firewall-cmd --permanent --add-service=http --add-service=https --add-service=ntp --add-service=dns --add-service=kerberos --add-service=ldap --add-service=ldaps --add-service=ftp
-  - name: Generating RSA Key
-    command : ssh-keygen -q -t rsa -f /home/user/.ssh/id_rsa -C "" -N ""
-    become: yes
+  - name: Removing Existing RSA Key
+    shell: rm -f /home/user/.ssh/id_rsa
+  - name: Generating New RSA Key
+    shell: ssh-keygen -q -t rsa -f /home/user/.ssh/id_rsa -C "" -N ""
+    args: 
+      creates: /home/user/.ssh/id_rsa
     become_user: user
-    ignore_errors: yes
+    become_method: sudo
   - name: Creating Welcome Message
     file:
       path: /etc/profile.d/welcome.sh
@@ -102,4 +113,6 @@
         # This system is running `cat /etc/redhat-release`
         # kernel is `uname -r`
         #
+        # Repo
+        # Available to use from http://repo.test.example.com/rpms/75rpms
         "
