--- a/playbooks/envplaybooks/master.yml
+++ b/playbooks/envplaybooks/master.yml
@@ -3,5 +3,6 @@
 - import_playbook: control.yml
 - import_playbook: node1.yml
 - import_playbook: node2.yml
+- import_playbook: node3.yml
 - import_playbook: keys.yml
 ...
