--- a/playbooks/envplaybooks/node1.yml
+++ b/playbooks/envplaybooks/node1.yml
@@ -14,6 +14,13 @@
       append: yes
   - name: Changing User Password
     shell: echo password | sudo passwd user --stdin
+  - name: Make sure user is in the sudoers configuration
+    lineinfile:
+      path: /etc/sudoers
+      regexp: '^# %users  localhost'
+      insertafter: '^# %users  localhost'
+      line: 'user ALL=(ALL) NOPASSWD: ALL'
+      state: present
   - name: Fixing hosts file
     lineinfile:
       dest: /etc/hosts
@@ -44,13 +51,13 @@
       path: /etc/hosts
       line: 192.168.55.62 node2.test.example.com node2
       create: yes
+  - name: Adding node3 IP address to hosts file
+    lineinfile:
+      path: /etc/hosts
+      line: 192.168.55.63 node3.test.example.com node3
+      create: yes
   - name: Erasing Repos
     shell: rm -rf /etc/yum.repos.d/*
-  - name: Creating Repo File
-    file:
-      path: /etc/yum.repos.d/rpms.repo
-      state: touch
-      mode: 0755
   - name: Building Repo File
     blockinfile:
       dest: /etc/yum.repos.d/rpms.repo
@@ -60,10 +67,7 @@
        baseurl=http://repo/rpms/75rpms
        gpgcheck=0
        enabled=1
-#  - name: Configuring network
-#    shell: nmcli con mod "System eth0" ipv4.addresses 192.168.55.61/24 ipv4.gateway 192.168.55.1 ipv4.dns 8.8.8.8 ipv4.method manual
-#  - name: Restarted Network
-#    shell: nmcli con up "System eth0"
+      create: yes
   - name: Starting Firewalld
     service: name=firewalld state=started
   - name: Enabling Firewall Services
