Cleaned up playbooks

--- a/playbooks/envplaybooks/control.yml
+++ b/playbooks/envplaybooks/control.yml
@@ -2,11 +2,11 @@
 - hosts: control
   strategy: free 
   gather_facts: False
-  become: true
+  ignore_errors: true
   tasks:
   - name: Setting Hostname
-    command: hostnamectl set-hostname control.test.example.com
-  - name: Creating Ansible User
+    hostname: name=control.test.example.com
+  - name: Creating User Account
     user:
       name: user
       shell: /bin/bash
@@ -14,48 +14,18 @@
       append: yes
   - name: Changing User Password
     shell: echo password | sudo passwd user --stdin
-  - name: Make sure user is in the sudoers configuration
+  - name: Checking Sudoers Configuration
     lineinfile:
       path: /etc/sudoers
       regexp: '^# %users  localhost'
       insertafter: '^# %users  localhost'
       line: 'user ALL=(ALL) NOPASSWD: ALL'
       state: present
-  - name: Fixing hosts file
-    lineinfile:
+  - name: Building host file
+    copy:
+      content: "127.0.0.1   localhost localhost.localdomain localhost4 localhost4.localdomain4\n192.168.55.60 control.test.example.com control\n192.168.55.59 repo.test.example.com repo\n192.168.55.61 node1.test.example.com node1\n192.168.55.62 node2.test.example.com node2\n192.168.55.63 node3.test.example.com node3"
       dest: /etc/hosts
-      regexp: '^127\.0\.0\.1'
-      state: absent
-  - name: Rebuilding host file
-    lineinfile:
-      path: /etc/hosts
-      line: 127.0.0.1   localhost localhost.localdomain localhost4 localhost4.localdomain4
-      create: yes
-  - name: Adding control address to hosts file
-    lineinfile:
-      path: /etc/hosts
-      line: 192.168.55.60 control.test.example.com control
-      create: yes
-  - name: Adding Repo address to hosts file
-    lineinfile:
-      path: /etc/hosts
-      line: 192.168.55.59 repo.test.example.com repo
-      create: yes
-  - name: Adding node1 IP address to hosts file
-    lineinfile:
-      path: /etc/hosts
-      line: 192.168.55.61 node1.test.example.com node1
-      create: yes
-  - name: Adding node2 IP address to hosts file
-    lineinfile:
-      path: /etc/hosts
-      line: 192.168.55.62 node2.test.example.com node2
-      create: yes
-  - name: Adding node3 IP address to hosts file
-    lineinfile:
-      path: /etc/hosts
-      line: 192.168.55.63 node3.test.example.com node3
-      create: yes
+      force: yes
   - name: Erasing Repos
     shell: rm -rf /etc/yum.repos.d/*
   - name: Creating Repo File
@@ -73,9 +43,33 @@
        gpgcheck=0
        enabled=1
   - name: Starting Firewalld
-    service: name=firewalld state=started
+    service: 
+      name: "{{ item }}"
+      enabled: true
+      state: started
+    with_items:
+      - httpd
+      - firewalld
+      - chronyd
   - name: Enabling Firewall Services
-    command: firewall-cmd --permanent --add-service=http --add-service=https --add-service=ntp --add-service=dns --add-service=kerberos --add-service=ldap --add-service=ldaps --add-service=ftp
+    firewalld: 
+      service: "{{ item }}"
+      immediate: yes
+      permanent: yes
+      state: enabled
+    with_items:
+      - http 
+      - https 
+      - ntp 
+      - dns 
+      - kerberos 
+      - ldap 
+      - ldaps 
+      - ftp
+  - name: Restarting Firewalld
+    service: 
+      name: firewalld
+      state: restarted
   - name: Removing Existing RSA Key
     shell: rm -f /home/user/.ssh/id_rsa
   - name: Generating New RSA Key
@@ -109,9 +103,8 @@
         #  \/____________\/_________/\/_/     \/_/\_\/      \/_/    \_\\/_________/\_______\/     
         '"#
         #
-         # You are logged into \"`hostname`\" as user \"`whoami`\"
+        # You are logged into \"`hostname`\" as the \"`whoami`\" account.
         # This system is running `cat /etc/redhat-release`
-        # kernel is `uname -r`
         #
         # Repo
         # Available to use from http://repo.test.example.com/rpms/75rpms
