--- a/playbooks/envplaybooks/node1.yml
+++ b/playbooks/envplaybooks/node1.yml
@@ -5,8 +5,8 @@
   become: true
   tasks:
   - name: Setting Hostname
-    command: hostnamectl set-hostname node1.test.example.com
-  - name: Creating Ansible User
+    hostname: name=node1.test.example.com
+  - name: Creating User Account
     user:
       name: user
       shell: /bin/bash
@@ -14,48 +14,18 @@
       append: yes
   - name: Changing User Password
     shell: echo password | sudo passwd user --stdin
-  - name: Make sure user is in the sudoers configuration
+  - name: Checking Sudoers Configuration
     lineinfile:
       path: /etc/sudoers
       regexp: '^# %users  localhost'
       insertafter: '^# %users  localhost'
       line: 'user ALL=(ALL) NOPASSWD: ALL'
       state: present
-  - name: Fixing hosts file
-    lineinfile:
+  - name: Building host file
+    copy:
       dest: /etc/hosts
-      regexp: '^127\.0\.0\.1'
-      state: absent
-  - name: Rebuilding host file
-    lineinfile:
-      path: /etc/hosts
-      line: 127.0.0.1   localhost localhost.localdomain localhost4 localhost4.localdomain4
-      create: yes
-  - name: Adding control address to hosts file
-    lineinfile:
-      path: /etc/hosts
-      line: 192.168.55.60 control.test.example.com control
-      create: yes
-  - name: Adding Repo address to hosts file
-    lineinfile:
-      path: /etc/hosts
-      line: 192.168.55.59 repo.test.example.com repo
-      create: yes
-  - name: Adding node1 IP address to hosts file
-    lineinfile:
-      path: /etc/hosts
-      line: 192.168.55.61 node1.test.example.com node1
-      create: yes
-  - name: Adding node2 IP address to hosts file
-    lineinfile:
-      path: /etc/hosts
-      line: 192.168.55.62 node2.test.example.com node2
-      create: yes
-  - name: Adding node3 IP address to hosts file
-    lineinfile:
-      path: /etc/hosts
-      line: 192.168.55.63 node3.test.example.com node3
-      create: yes
+      content: "127.0.0.1   localhost localhost.localdomain localhost4 localhost4.localdomain4\n192.168.55.60 control.test.example.com control\n192.168.55.59 repo.test.example.com repo\n192.168.55.61 node1.test.example.com node1\n192.168.55.62 node2.test.example.com node2\n192.168.55.63 node3.test.example.com node3"
+      force: yes
   - name: Erasing Repos
     shell: rm -rf /etc/yum.repos.d/*
   - name: Building Repo File
@@ -68,16 +38,8 @@
        gpgcheck=0
        enabled=1
       create: yes
-  - name: Starting Firewalld
-    service: name=firewalld state=started
-  - name: Enabling Firewall Services
-    command: firewall-cmd --permanent --add-service=http --add-service=https --add-service=ntp --add-service=dns --add-service=kerberos --add-service=ldap --add-service=ldaps --add-service=ftp
   - name: Fixing Resolv File
     shell: echo 'nameserver 8.8.8.8' > /etc/resolv.conf
-  - name: Enabling services
-    service: name=firewalld enabled=true
-  - name: Starting services
-    service: name=firewalld state=started
   - name: Creating Welcome Message
     file:
       path: /etc/profile.d/welcome.sh
@@ -103,8 +65,7 @@
         #  \/_/     \/_/\/_________/    \/_____/\/__________/      \_________\/ 
         '"#
         #
-         # You are logged into \"`hostname`\" as user \"`whoami`\"
+         # You are logged into \"`hostname`\" as the \"`whoami`\" account.
         # This system is running `cat /etc/redhat-release`
-        # kernel is `uname -r`
         #
         "
