--- a/playbooks/envplaybooks/repo.yml
+++ b/playbooks/envplaybooks/repo.yml
@@ -1,12 +1,12 @@
 ---
 - hosts: repo
   strategy: free
-  become: true
+  ignore_errors: true
   gather_facts: false
   tasks:
   - name: Setting Hostname
-    command: hostnamectl set-hostname repo.test.example.com
-  - name: Creating Ansible User
+    hostname: name=repo.test.example.com
+  - name: Creating User Account
     user:
       name: user
       shell: /bin/bash
@@ -14,7 +14,7 @@
       append: yes
   - name: Changing User Password
     shell: echo password | sudo passwd user --stdin
-  - name: Make sure user is in the sudoers configuration
+  - name: Checking Sudoers Configuration
     lineinfile:
       path: /etc/sudoers
       regexp: '^# %users  localhost'
@@ -30,47 +30,37 @@
     command: createrepo /var/www/html/rpms/75rpms
   - name: Restoring Contexts
     command: restorecon -R /var/www/html/rpms/
-  - name: Fixing hosts file
-    lineinfile:
+  - name: Building host file
+    copy:
+      content: "127.0.0.1   localhost localhost.localdomain localhost4 localhost4.localdomain4\n192.168.55.60 control.test.example.com control\n192.168.55.59 repo.test.example.com repo\n192.168.55.61 node1.test.example.com node1\n192.168.55.62 node2.test.example.com node2\n192.168.55.63 node3.test.example.com node3"
       dest: /etc/hosts
-      regexp: '^127\.0\.0\.1'
-      state: absent
-  - name: Rebuilding host file
-    lineinfile:
-      path: /etc/hosts
-      line: 127.0.0.1   localhost localhost.localdomain localhost4 localhost4.localdomain4
-      create: yes
-  - name: Adding control address to hosts file
-    lineinfile:
-      path: /etc/hosts
-      line: 192.168.55.60 control.test.example.com control
-      create: yes
-  - name: Adding Repo address to hosts file
-    lineinfile:
-      path: /etc/hosts
-      line: 192.168.55.59 repo.test.example.com repo
-      create: yes
-  - name: Adding node1 IP address to hosts file
-    lineinfile:
-      path: /etc/hosts
-      line: 192.168.55.61 node1.test.example.com node1
-      create: yes
-  - name: Adding node2 IP address to hosts file
-    lineinfile:
-      path: /etc/hosts
-      line: 192.168.55.62 node2.test.example.com node2
-      create: yes
+      force: yes
   - name: Enabling services
-    shell: for i in httpd firewalld chronyd ; do systemctl enable $i;done
-  - name: Starting services
-    shell: for i in httpd firewalld chronyd ; do systemctl start $i;done
-    ignore_errors: true
-  - name: Starting Firewalld
-    service: name=firewalld state=started
+    service: 
+      name: "{{ item }}"
+      state: started
+      enabled: yes
+    with_items:
+      - httpd
+      - firewalld
+      - chronyd
   - name: Enabling Firewall Services
-    command: firewall-cmd --permanent --add-service=http --add-service=https --add-service=ntp --add-service=dns --add-service=kerberos --add-service=ldap --add-service=ldaps --add-service=ftp
+    firewalld: 
+      service: "{{ item }}"
+      immediate: yes
+      permanent: yes
+      state: enabled
+    with_items:
+      - http 
+      - https 
+      - ntp 
+      - dns 
+      - kerberos 
+      - ldap 
+      - ldaps 
+      - ftp
   - name: Reloading Firewall
-    command: firewall-cmd --reload
+    service: name=firewalld state=restarted
   - name: Enabling IPV6
     shell: sysctl net.ipv6.conf.lo.disable_ipv6=0 ; sysctl net.ipv6.conf.all.disable_ipv6=0
   - name: Creating Welcome Message
@@ -100,11 +90,7 @@
          # Why are you here? You should be working on the system hosts...
          # Anyway, try not to reboot me or bad stuff can happen.
          #
-         # You are logged into `hostname`
+         # You are logged into `hostname` as the \"`whoami`\" account.
          # This system is running `cat /etc/redhat-release`
-         # kernel is `uname -r`
-         #
-         # You are logged in as `whoami`
-         #
          "
 ...
