--- a/playbooks/envplaybooks/node3.yml
+++ b/playbooks/envplaybooks/node3.yml
@@ -14,6 +14,8 @@
       append: yes
   - name: Changing User Password
     shell: echo password | sudo passwd user --stdin
+  - name: Changing Root Password
+    shell: echo password | sudo passwd root --stdin
   - name: Checking Sudoers Configuration
     lineinfile:
       path: /etc/sudoers
